# kuasar

./: .gitignore  .licenserc.yaml  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  fill_the_complete_cpu_and_mem_stats_fixup_container_memory_update_shim__fix_leaking_thread.patch  task__implement_close_io_task__fix_leaking_files_for_exec_process_task__report_more_OCI_ru.patch  ttrpc-rust_01_fix_timing_issue_of_streaming.patch  ttrpc-rust_02_add_channel_to_get_send_result.patch  ttrpc-rust_03_codegen__create_imutable_methods_if_there_is_no_unary_method.patch
.github/workflows/: ci.yml  deploy.yml  release.yaml
CHANGELOG/: CHANGELOG-before-v1.0.md
docs/: containerd.md
docs/shim/: README.md
docs/vmm/: README.md  how-to-run-kuasar-with-isulad-and-stratovirt.md
examples/: run_example_container.sh  run_example_wasm_container.sh
patch/: containerd.patch  create_sandbox_directory_if_not_exist.patch  rust-exts.patch
quark/: Cargo.toml
quark/service/: kuasar-quark.service
quark/src/: mount.rs  sandbox.rs  utils.rs
shim/: Cargo.toml  Makefile  README.md
shim/src/: client.rs  io.rs  sandbox.rs  service.rs  task.rs
test/benchmark/: README.md
tests/benchmark/: Benchmark.md
vmm/: Cargo.toml
vmm/common/: Cargo.toml  build.rs
vmm/common/src/: lib.rs  mount.rs
vmm/sandbox/: Cargo.toml  config_clh.toml  config_stratovirt.toml
vmm/sandbox/src/: client.rs  config.rs  (+5 more)
vmm/task/: Cargo.toml
wasi/: Cargo.toml
wasi/src/: main.rs  sandbox.rs  wasmedge.rs
wasm/: Cargo.toml
wasm/service/: kuasar-wasm.service
wasm/src/: main.rs  sandbox.rs  wasmedge.rs
(+49 files in other folders)
