[package]
name = "quark-sandboxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
prost = "0.10.4"
prost-types = "0.10.1"
containerd-sandbox = {git=""}
containerd-shim = {git="", features = ["async"] }
anyhow = "1.0.66"
env_logger = "0.9.0"
log = "0.4.14"
async-trait = "0.1.56"
serde_json = "1.0.69"
nix = "0.23.0"
lazy_static = "1.4.0"
time = "0.3.5"
